finishing the working demo

--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
 <script>  var select = document.getElementsByName("getEscaltions")[0];
 
     select.addEventListener('input' , function()
-    {   data_value = document.getElementById("Esclations_reqs").data_value;
-    console.log(data_value);
+    {   
+        // data_value = document.getElementById("Esclations_reqs").data_value;
+    // console.log(data_value);
         document.getElementById("big").innerHTML="value details is "+ data_value;
     });
      </script>
