connecting to the forms

--- a/ex.html
+++ b/ex.html
@@ -9,11 +9,11 @@
     <body>
         <div class="styling">
         <select id="list" onchange="getSelectValue();" class="slide">
-            <option value="https://www.youtube.com/results?search_query=change+the+path+of+the+page+on+select+html">JavaScript</option>
-            <option value="https://docs.google.com/spreadsheets/d/1UQrE3Q0_oePcHGbvglf81ijD-a9q8V2IVHVulglAKJs/edit#gid=1609218615">PHP</option>
-            <option value="c#">Csharp</option>
-            <option value="java">Java</option>
-            <option value="node">Node.js</option>
+            <option value="https://forms.gle/2HdEUwFyYfcyPBYo7">Add/change pt information</option>
+            <option value="https://forms.gle/rZi5W4C8bagqJCYh7">Send results via callCenter Email</option>
+            <option value="https://forms.gle/hDjDQ5YfnvTLgrpq9">At Home Late Results/Incorrect Information Report</option>
+            <option value="https://forms.gle/34YK2qButjDFZXqC7">Supervisor Call Request</option>
+            <option value="node">choice 4</option>
         </select>
     </div>
         
