adding title with animation

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <meta charset="windows-1252">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./style.css">
+        <link rel="icon" href="./Medrite-Urgent-Care-removebg-preview.png">
     </head>
     <body>
+        <h1 class="header">What Do You want to Request?</h1>
         <div class="styling">
         <select id="list" onchange="getSelectValue();" class="slide">
             <option value="https://forms.gle/2HdEUwFyYfcyPBYo7">Add/change pt information</option>
