adding the Intelichart Reporting option to the menu

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
         <select id="list" onchange="getSelectValue();" class="slide">
             <option value="https://forms.gle/2HdEUwFyYfcyPBYo7">Add/change pt information</option>
             <option value="https://forms.gle/rZi5W4C8bagqJCYh7">Send results via callCenter Email</option>
-            <option value="https://forms.gle/hDjDQ5YfnvTLgrpq9">At Home Late Results/Incorrect Information Report</option>
+<!--             <option value="https://forms.gle/hDjDQ5YfnvTLgrpq9">At Home Late Results/Incorrect Information Report</option> -->
             <option value="https://forms.gle/34YK2qButjDFZXqC7">Supervisor Call Request</option>
             <option value="https://forms.gle/Vt4sQibgcpMY3azv7">Prescription related issues </option>
-            <option value="https://forms.gle/ddu9uHsZ7kZ766Bc6">BOE</option>
+<!--             <option value="https://forms.gle/ddu9uHsZ7kZ766Bc6">BOE</option> -->
             <option value="https://forms.gle/rah376LXfSVRSVHZA">Unanswered Calls by Clinics/Aftercare</option>
+            <option value="https://forms.gle/pcBhA6LvrZs52Dor9">Intelichart Reporting</option>
         </select>
     </div>
         
